# uncertain_value

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build.yaml
exec/: exponential_decay.cpp  exponentiation.cpp  main.cpp  vector_sum.cpp
include/uncertain_value/: ast.hpp  nominal_uncertain_value.hpp
src/: ast.cpp  nominal_uncertain_value.cpp
test/: test_nominal_uncertain_value.cpp
